# yolox_trt_attrs

./: CMakeLists.txt  base_detector.cpp  base_detector.h  detector_utils.h  detector_yolox.cpp  detector_yolox.h  main.cpp  yolox.cpp
types/: object_semantic.h
